--- a/gui/slick/interfaces/default/config_postProcessing.tmpl
+++ b/gui/slick/interfaces/default/config_postProcessing.tmpl
@@ -1015,7 +1015,74 @@
                                       <br/>
                                 </div>
                             </div><!-- /naming_anime_custom -->
-						
+
+                            <div class="field-pair">
+                                <label class="nocheck clearfix" for="naming_anime_multi_ep">
+                                    <span class="component-title">Multi-Episode Style:</span>
+                                    <span class="component-desc">
+                                        <select id="naming_anime_multi_ep" name="naming_anime_multi_ep">
+                                        #for $cur_multi_ep in sorted($multiEpStrings.items(), key=lambda x: x[1]):
+                                            <option value="$cur_multi_ep[0]" #if $cur_multi_ep[0] == $sickbeard.NAMING_ANIME_MULTI_EP then "selected=\"selected\" class=\"selected\"" else ""#>$cur_multi_ep[1]</option>
+                                        #end for
+                                        </select>
+                                    </span>
+                                </label>
+                            </div>
+
+                            <div id="naming_example_anime_div">
+                                <h2>Single-EP Anime Sample:</h2>
+                                <div class="example">
+                                    <span class="jumbo" id="naming_example_anime">&nbsp;</span>
+                                </div>
+                                <br/>
+                            </div>
+
+                            <div id="naming_example_multi_anime_div">
+                                <h2>Multi-EP Anime sample:</h2>
+                                <div class="example">
+                                    <span class="jumbo" id="naming_example_multi_anime">&nbsp;</span>
+                                </div>
+                                <br/>
+                            </div>
+
+                            <div class="field-pair">
+                                <input type="radio" name="naming_anime" id="naming_anime" value="1" #if $sickbeard.NAMING_ANIME == 1 then "checked=\"checked\"" else ""#/>
+                                <label class="clearfix" for="naming_anime">
+                                    <span class="component-title">Add Absolute Number</span>
+                                    <span class="component-desc">Add the absolute number to the season/episode format?</span>
+                                </label>
+                                <label class="nocheck clearfix">
+                                    <span class="component-title">&nbsp;</span>
+                                    <span class="component-desc">Only applies to animes. (eg. S15E45 - 310 vs S15E45)</span>
+                                </label>
+                            </div>
+
+                            <div class="field-pair">
+                                <input type="radio" name="naming_anime" id="naming_anime_only" value="2" #if $sickbeard.NAMING_ANIME == 2 then "checked=\"checked\"" else ""#/>
+                                <label class="clearfix" for="naming_anime_only">
+                                    <span class="component-title">Only Absolute Number</span>
+                                    <span class="component-desc">Replace season/episode format with absolute number</span>
+                                </label>
+                                <label class="nocheck clearfix">
+                                    <span class="component-title">&nbsp;</span>
+                                    <span class="component-desc">Only applies to animes.</span>
+                                </label>
+                            </div>
+
+                            <div class="field-pair">
+                                <input type="radio" name="naming_anime" id="naming_anime_none" value="3" #if $sickbeard.NAMING_ANIME == 3 then "checked=\"checked\"" else ""#/>
+                                <label class="clearfix" for="naming_anime_none">
+                                    <span class="component-title">No Absolute Number</span>
+                                    <span class="component-desc">Dont include the absolute number</span>
+                                </label>
+                                <label class="nocheck clearfix">
+                                    <span class="component-title">&nbsp;</span>
+                                    <span class="component-desc">Only applies to animes.</span>
+                                </label>
+                            </div>
+
+                        </div><!-- /naming_anime_different -->
+
                         <div class="clearfix"></div>
                         <input type="submit" class="btn config_submitter" value="Save Changes" /><br/>
 
